[package]
name = "amqp-proto"
version = "0.1.0"
authors = ["hml1006 <hml1006@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
property = "0.3.2"
bytes = "0.5.4"
nom = "5.1.2"
paste = "0.1.18"
tokio-util = { version = "0.3.1", features = ["codec"]}